Overlapping fix

--- a/app/styles/views/landing.scss
+++ b/app/styles/views/landing.scss
@@ -85,8 +85,8 @@
             }
 
             .scale {
-                top: 0%;
-                right: 42%;
+                bottom: 85%;
+                right: 40%;
             }
 
             .tracking {
@@ -95,7 +95,7 @@
             }
 
             .location {
-                top: 82%;
+                top: 75%;
                 left: 85%;
             }
         }
